<resources>
   <!-- <string name="app_name">Medicine Reminder and Monitoring System</string> -->
    <string name="app_name">MRM System</string>
    <string name="select_specification">Select specification</string>
    <string name="input">Input</string>
    <string name="run_step">Run Step</string>
    <string name="output">Output</string>
    <string name="fosamax">Fosamax</string>
    <string name="moment">Moment</string>
 <string name="compartment1">compartment1</string>
 <string name="compartment2">compartment2</string>
 <string name="no">NO</string>
 <string name="scheduling_table">SCHEDULING TABLE</string>
 <string name="medicine">Medicine</string>
 <string name="time">Time</string>
 <string name="new_time">New time</string>
 <string name="skip_pill">Skip pill</string>
 <string name="_360">360</string>
 <string name="_730">730</string>
 <string name="_1140">1140</string>
 <string name="consumption_time">Consumption time</string>

</resources>
