<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectFile"
        android:text="@string/select_specification"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editInput"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input"
        android:inputType="textMultiLine|textPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="runStep"
        android:text="@string/run_step" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textOutput"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:hint="@string/output"
                android:scrollbars="vertical"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>